<resources>
    <string name="app_name">Study Centre</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_support">Support</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_title_notification_one">3rd Sem Books available now.</string>
    <string name="str_body_notification_one">Download now for free.</string>
    <string name="str_title_notification_two">4th Sem Books available now.</string>
    <string name="str_body_notification_two">Download now for free.</string>

    <string name="str_body_notification_three">Download now for free.</string>
    <string name="str_body_notification_four">Download now for free</string>
    <string name="fetch_remote_welcome_message">fetch remote welcome</string>
    <string name="title_activity_settings">Settings</string>
    <!-- common -->
    <string name="downloading">Downloading Now...</string>
    <!-- Preference Titles -->
    <string name="messages_header">Basic</string>
    <string name="sync_header">App</string>

    <!-- Messages Preferences -->
    <string name="signature_title">font Style</string>
    <string name="reply_title">Theme</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="crd_title">Credits</string>
    <string name="study_links">Links</string>
    <string name="study_telegram_title">Telegram</string>
    <string name="study_telegram_summary">Join official group</string>
    <string name="title_activity_nav_about">About</string>
    <!-- studymaterial -->
    <string name="sem1">SEMESTER 1</string>
    <string name="sem2">SEMESTER 2</string>
    <string name="sem3">SEMESTER 3</string>
    <string name="sem4">SEMESTER 4</string>
    <string name="sem5">SEMESTER 5</string>
    <string name="sem6">SEMESTER 6</string>
    <!--Grid text title -->
    <string name="study_material">Study Material</string>
    <string name="practicals">practicals</string>
    <string name="mock_text">Mock Test</string>
    <string name="solved_paper">Solved Papers</string>
    <string name="black_book">Black Book</string>
    <string name="timetable">Time Table</string>
    <string name="notes">Notes</string>
    <string name="spinner_title">select something</string>
    <string name="college_Key">Please enter College Key</string>
    <string name="books_upload_file_name">file name</string>
    <string name="btn_upload">Upload</string>
</resources>
