<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.Rai.studycenter.helpers.custom.MyPreferenceCategory  app:title="@string/messages_header">

        <ListPreference
            app:key="set_font"
            app:defaultValue="Roboto"
            app:entries="@array/font_entries"
            app:entryValues="@array/font_values"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/set_font"
            />

        <ListPreference
            app:defaultValue="Dark"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="theme"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true"
            android:icon="@drawable/set_theme"
            />

    </com.Rai.studycenter.helpers.custom.MyPreferenceCategory>

    <com.Rai.studycenter.helpers.custom.MyPreferenceCategory app:title="@string/sync_header">

        <Preference
            app:key="feedback"
            app:title="Pankaj Rai"
            android:icon="@drawable/developer"
            app:summary="• Founder\n• Main Developer\n• Designer">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.paypal.me/pankajrai"/>
        </Preference>

    </com.Rai.studycenter.helpers.custom.MyPreferenceCategory>

</androidx.preference.PreferenceScreen>
