<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.Rai.studycenter.helpers.custom.MyPreferenceCategory
        android:key="links"
        android:title="@string/study_links">
        <Preference
            android:key="study_telegram"
            android:title="@string/study_telegram_title"
            android:summary="@string/study_telegram_summary"
            android:icon="@drawable/telegram">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/studycenterapp"/>
        </Preference>
        <Preference
            android:key="study_telegram"
            android:title="Announcements"
            android:summary="Official announcements channel"
            android:icon="@drawable/announcements">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/studycenterbroadcast"/>
        </Preference>
        <Preference
            android:key="study_telegram"
            android:title="Changelog"
            android:summary="View recent changes is app"
            android:icon="@drawable/changelog">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/studycenterbroadcast"/>
        </Preference>
    </com.Rai.studycenter.helpers.custom.MyPreferenceCategory>
</PreferenceScreen>