<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.Rai.studycenter.helpers.custom.MyPreferenceCategory app:title="App">
        <Preference
            app:key="feedback"
            app:title="Study Center"
            android:icon="@drawable/developer"
            app:summary="• Version: 3.0.0\n• Build: Stable\n• Status: released">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.paypal.me/pankajrai"/>
        </Preference>
    </com.Rai.studycenter.helpers.custom.MyPreferenceCategory>
    <com.Rai.studycenter.helpers.custom.MyPreferenceCategory app:title="@string/crd_title">
        <Preference
            app:key="feedback"
            app:title="Pankaj Rai"
            android:icon="@drawable/developer"
            app:summary="• Founder\n• Main Developer\n• Designer">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.paypal.me/pankajrai"/>
        </Preference>
        <Preference
            app:key="feedback"
            app:title="barteksc"
            android:icon="@drawable/developer"
            app:summary="• PDF Viewer Library">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/barteksc"/>
        </Preference>
    </com.Rai.studycenter.helpers.custom.MyPreferenceCategory>
    <com.Rai.studycenter.helpers.custom.MyPreferenceCategory
        android:key="links"
        android:title="@string/study_links">
        <Preference
            android:key="study_telegram"
            android:title="@string/study_telegram_title"
            android:summary="@string/study_telegram_summary"
            android:icon="@drawable/telegram">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/studycenterapp"/>
        </Preference>
        <Preference
            android:key="study_telegram"
            android:title="Announcements"
            android:summary="Official announcements channel"
            android:icon="@drawable/announcements">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/studycenterbroadcast"/>
        </Preference>
        <Preference
            android:key="study_telegram"
            android:title="Changelog"
            android:summary="View recent changes is app"
            android:icon="@drawable/changelog">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/studycenterbroadcast"/>
        </Preference>
    </com.Rai.studycenter.helpers.custom.MyPreferenceCategory>
    <com.Rai.studycenter.helpers.custom.MyPreferenceCategory app:title="Beta Testers">
        <Preference

            app:title="Tester 1"
            android:icon="@drawable/developer">
          >
        </Preference>
        <Preference

            app:title="Tester 2"
            android:icon="@drawable/developer">
        </Preference>
        <Preference

            app:title="Tester 3"
            android:icon="@drawable/developer">
        </Preference>
    </com.Rai.studycenter.helpers.custom.MyPreferenceCategory>
    <com.Rai.studycenter.helpers.custom.MyPreferenceCategory app:title="Translation">
        <Preference

            app:title="Translator 1"
            android:icon="@drawable/developer">
            >
        </Preference>
        <Preference

            app:title="Translator 2"
            android:icon="@drawable/developer">
        </Preference>
        <Preference

            app:title="Translator 3"
            android:icon="@drawable/developer">
        </Preference>
    </com.Rai.studycenter.helpers.custom.MyPreferenceCategory>
</PreferenceScreen>